resolved spacing between input box and the messages before it

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -211,7 +211,7 @@ width:70%;
   width:100%;
   overflow:hidden;
   z-index:2;
-  left:35%;
+  left:30%;
   background-color: #F5F5DC;
 }
 
